--- a/templates/page_templates/base.html
+++ b/templates/page_templates/base.html
@@ -7,13 +7,13 @@
         <meta name="author" content="" />
         <title>{% block title %}{{ title }}{% endblock title %}</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
-        <link href="/css/bootstrap-icons.css" rel="stylesheet" />
+        <link href="css/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
         <!-- Custom CSS -->
-        <link href="/css/custom.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -54,8 +54,8 @@
             </div>
         </footer>
         <!-- Bootstrap core JS-->
-        <script src="/js/bootstrap.bundle.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="/js/scripts.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
