--- a/templates/page_templates/main.html
+++ b/templates/page_templates/main.html
@@ -41,7 +41,7 @@
                         {% endif %}
                         
                         <div class="col-lg-12 mb-5 mb-lg-0"><h2 class="fw-bolder mt-5">Utgifter</h2><hr></div>
-                        <script src="/js/chart.js"></script>
+                        <script src="js/chart.js"></script>
                         <div class="col-lg-12 mb-5 mb-lg-0">
                             <canvas id="expenses_bar_chart" height="80"></canvas>
                         </div>
